fix: make sure there is no horizontal scrollbar.

--- a/static/global.css
+++ b/static/global.css
@@ -7,4 +7,5 @@ html,
 body {
   background-color: var(--background-color);
   color: var(--text-color);
+  overflow-x: hidden;
 }
